--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>何英豪</h1>
-							<p class="major">何英豪的blog</a>.</p>
+							<h1>说明</h1>
+							<p class="major">很高兴你参加这个实验，Facebook上的广告是用于进行一项行为实验，如果你有任何问题，请联系以下邮箱</a>.</p>
+							<p class="major">heyinghao@hust.edu.cn</a>.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
@@ -31,21 +32,7 @@
 						</div>
 					</section>
 
-				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-						<div class="content">
-							<h2>If you have any questions, please contact email</h2>
-							<p>heyinghao@hust.edu.cn</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
-						</div>
-					</section>
 	
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
