--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>说明</h1>
-							<p class="major">很高兴你参加这个实验，Facebook上的广告是用于进行一项行为实验，如果你有任何问题，请联系以下邮箱</a>.</p>
+							<p class="major">很高兴你参加这个实验，Facebook上的广告是用于进行一项行为实验。本实验不会收集任何你的个人信息，只是测试不同广告点击率的差异。只是如果你有任何问题，请联系以下邮箱</a>.</p>
 							<p class="major">heyinghao@hust.edu.cn</a>.</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Thinks</a></li>
 							</ul>
 						</div>
 						<div class="image">
