--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>说明</h1>
-							<p class="major">很高兴你参加这个实验，Facebook上的广告是用于进行一项行为实验。本实验不会收集任何你的个人信息，只是测试不同广告点击率的差异。只是如果你有任何问题，请联系以下邮箱</a>.</p>
+							<h1>Experiment Introduction</h1>
+							<p class="major">I'm glad you took part in this experiment. The ads on Facebook were used to conduct a behavioral experiment. This experiment will not collect any personal information from you, but will only test the difference in CTR of different ads. If you have any questions, please contact the following email address.</a>.</p>
 							<p class="major">heyinghao@hust.edu.cn</a>.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Thinks</a></li>
