--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Experiment Introduction</h1>
-							<p class="major">I'm glad you took part in this experiment. The ads on Facebook were used to conduct a behavioral experiment. This experiment will not collect any personal information from you, but will only test the difference in CTR of different ads. If you have any questions, please contact the following email address.</a>.</p>
+							<p class="major">I'm glad you took part in this experiment.</a>.</p>
+							<p class="major">The ads on Facebook were used to conduct a behavioral experiment. This experiment will not collect any personal information from you, but will only test the difference in CTR(click-through rate) of different ads.</a>.</p>
+							<p class="major">If you have any questions, please contact the following email address.</a>.</p>
 							<p class="major">heyinghao@hust.edu.cn</a>.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Thinks</a></li>
